# alpine-toolkit

./: .clang-format  .dir-locals.el  .flake8  .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  DOXYGEN-MAINPAGE.md  Doxyfile  README.md  alpha-ursae-minoris.pro  alpha-ursae-minoris.qrc  alpine-toolkit-all.pro  alpine-toolkit.pro  alpine-toolkit.qrc  android_activity.cpp  android_activity.h  build-android-armv7.yaml  build-android-x86.yaml  build-x86.yaml  common.pri  config.h.in  dot-emacs.el  invoke.yaml  main.cpp  main.qml  qtlabscontrols.conf  satellite_model.h  sensors.pro  sensors.qml  sensors.qrc  update-translation.sh
map-tools/: CMakeLists.txt  README.md  clean-tiles.py  make-tile-database.py  merge-tiles.py  spatialite-test.cpp  tile-loader.cpp
mapviewer/: CMakeLists.txt  README.md  icons  main.cpp  mapviewer.qrc
mapviewer/pages/: MapComponent.qml
service/: CMakeLists.txt  client.cpp  client.h  client.pri  definitions.h  main.cpp  native.cpp  service.cpp  service.h  service.pro  service.rep  service_application.cpp  service_application.h
sqlite-driver/: CMakeLists.txt  README.md  init.sh  patch.diff  qsql_sqlite_at.cpp  qsql_sqlite_at_p.h  run-android-qmake.sh  smain.cpp  sqlite-at.json
src/: CMakeLists.txt  README.md  alpine-toolkit.pri  alpine_toolkit.h  alpine_toolkit_common.pri  alpine_toolkit_common.pro  android_activity.h  main.cpp  main.pri  satellite_model.cpp
src/android_activity/: android_activity.cpp  android_activity.h
src/application/: application.cpp  application.h  test.cpp
src/bleaudb/: bleau_database.cpp  bleau_database.h  bleau_json_helper.cpp  bleau_json_helper.h  bleau_schema.cpp  bleau_schema.h  bleau_schema_manager.cpp  bleau_schema_manager.h  bleau_sqlite_database.cpp  bleau_sqlite_database.h  bleaudb-generated.cpp  bleaudb-generated.h  bleaudb.cpp  bleaudb.h  bleaudb_database.cpp  bleaudb_database.h  bleaudb_json_helper.cpp  bleaudb_json_helper.h  bleaudb_json_loader.cpp  bleaudb_json_loader.h
src/camptocamp/: camptocamp.cpp  camptocamp.h  camptocamp_api_cache.cpp  camptocamp_api_cache.h  camptocamp_cache.cpp  camptocamp_cache.h  camptocamp_client.cpp  camptocamp_client.h  camptocamp_constant.h  camptocamp_document.cpp  camptocamp_document.h  camptocamp_login.cpp  camptocamp_login.h  camptocamp_login_data.cpp  camptocamp_login_data.h  camptocamp_media_cache.cpp  camptocamp_media_cache.h  camptocamp_qml.cpp  camptocamp_qml.h  camptocamp_schema.cpp  camptocamp_schema.h  camptocamp_search_settings.cpp  camptocamp_search_settings.h
src/checksum/: README.md  checksum.cpp  checksum.h  damm-matrix.txt
src/configuration/: android_configuration.cpp  android_configuration.h  configuration.cpp  configuration.h  linux_configuration.cpp  linux_configuration.h
src/database/: database.cpp  database.h  database_connection.cpp  database_connection.h  database_row.h  database_row.hxx  database_row_list.h  database_row_list.hxx  database_schema.cpp  database_schema.h  database_schema.hxx  database_table.cpp  database_table.h  json_helper.cpp  json_helper.h  network_database.cpp  network_database.h  schema.cpp  schema.h  sql_record_wrapper.h  sqlite_database.cpp  sqlite_database.h  type_conversion.cpp  type_conversion.h
src/document/: document.cpp  document.h  document_database.cpp  document_database.h  document_manager.cpp  document_manager.h
src/ephemeride/: ephemeride.cpp  ephemeride.h
src/full_text_search/: document.cpp  indexer.h  indexer.hxx  language.h  phonetic_encoder.cpp  phonetic_encoder.h  stemmer.cpp  stemmer.h  text_document.cpp  text_document.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h
src/international_morse_code_engine/: international_morse_code_engine.cpp  international_morse_code_engine.h  international_morse_code_engine.py  international_morse_code_engine_table.cpp
src/logging/: handler.cpp  handler.h  logger.cpp  logger.h
src/morse/: international-morse-code-table.cpp  international-morse-code.cpp  international-morse-code.h  international-morse-code.py  morse.pro  test_morse.cpp
src/network/: network.pro  network_downloader.cpp  network_downloader.h  network_fetcher.cpp  network_fetcher.h  network_reply.cpp  network_reply.h  network_request.cpp  network_request.h  network_request_manager.cpp  network_request_manager.h  network_ressource_request.cpp  network_ressource_request.h  test_network.cpp
src/orm/: README.md  SqlQueryModel.cpp  SqlQueryModel.h  database.cpp  database.h  database_connection.cpp  database_connection.h  database_query.cpp  database_query.h  database_query.hxx  database_row.h  database_row.hxx  database_row_list.h  database_row_list.hxx  database_schema.cpp  database_schema.h  database_schema.hxx  database_table.cpp  database_table.h  json_adaptator.cpp  json_adaptator.h  network_database.cpp  network_database.h  schema.cpp  schema.h  schema_manager.cpp  schema_manager.h  sql_flavour.h  sql_query_model.cpp  sql_query_model.h  sql_record_wrapper.h  sqlite_database.cpp  sqlite_database.h  type_conversion.cpp  type_conversion.h
src/phonetic_algorithm/: phonetic_algorithm.h  soundex.cpp
src/platform_abstraction/: android_fake_platform.h  android_native.cpp  android_permission_manager.cpp  android_permission_manager.h  android_platform.cpp  android_platform.h  linux_platform.cpp  linux_platform.h  permission_manager.cpp  platform_abstraction.cpp  platform_abstraction.h
src/qml/: CMakeLists.txt
src/qtcarto/: CMakeLists.txt  coordinate  data_structure  earth.h  enum_flag.h  geo_data_format  geometry  math  qtcarto.h  qtcarto.pri  qtcarto.pro  qtcarto_global.h
src/refuge/: refuge.cpp  refuge.h  refuge_schema.cpp  refuge_schema.h  refuge_schema_custom_code.cpp  refuge_schema_manager.cpp  refuge_schema_manager.h  refuge_sqlite_database.cpp  refuge_sqlite_database.h
src/rrd/: rrd.cpp  rrd.h
src/satellite_model/: satellite_model.cpp  satellite_model.h
src/sensors/: qml_barimeter_altimeter_sensor.cpp  qml_barimeter_altimeter_sensor.h  (+2 more)
test/: CMakeLists.txt
third-parties/: CMakeLists.txt  build-openssl-android.sh  get-third-parties
unit-tests/: CMakeLists.txt  README.md
(+1026 files in other folders)
